Правит классы и скрывает необходимые заголовки

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
     <!-- Menu-->
     <header class="page-header">
-        <div class="container flex">
+        <div class="container page-header">
             <nav class="nav-flex">
                 <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
                 <ul class="site-nav ">
@@ -56,7 +56,7 @@
         <!-- Advantages -->
         <section class="section">
             <div class="container">
-                <h2 class="section-title">Преймущества</h2>
+                <h2 class="visually-hidden">Преймущества</h2>
                 <ul class=" advantages">
                     <li class="advantages-item">
                         <h3 class="advantages-title">Внимание к деталям</h3>
@@ -79,7 +79,7 @@
         </section>
 
         <!-- What are we doing -->
-        <section class="section doing">
+        <section class="section doing-section">
             <div class="container">
                 <h2 class="section-title">Чем мы занимаемся</h2>
                 <ul class="doing">
@@ -91,7 +91,7 @@
         </section>
 
         <!--Team-->
-        <section class="section team">
+        <section class="section team-section">
             <div class="container">
                 <h2 class="section-title">Наша команда</h2>
                 <ul class="team">
