--- a/portfolio.html
+++ b/portfolio.html
@@ -24,16 +24,16 @@
 <body>
     <!-- Menu-->
     <header class="page-header">
-        <div class="container flex">
+        <div class="container page-header">
             <nav class="nav-flex">
                 <a href="./index.html" class="logo link"><span class="blue-logo">Web</span>Studio</a>
-                <ul class="site-nav list">
-                    <li class="item"><a href="./index.html" class="link">Студия</a></li>
+                <ul class="site-nav ">
+                    <li class="item"><a href="./index.html" class="link ">Студия</a></li>
                     <li class="item"><a href="./portfolio.html" class="link current">Портфолио</a></li>
                     <li class="item"><a href="#" class="link">Контакты</a></li>
                 </ul>
             </nav>
-            <ul class="auth-nav list">
+            <ul class="auth-nav ">
                 <li class="iteam"><a href="mailto:info@devstudio.com" class="link">info@devstudio.com</a></li>
                 <li class="iteam"><a href="tel:+380961111111" class="link">+38 096 111 11 11</a></li>
             </ul>
@@ -46,7 +46,7 @@
     <main>
         <section class="section">
             <div class="container">
-                <h1 class="title">Потртфолио</h1>
+                <h1 class="visually-hidden">Потртфолио</h1>
                 <ul class="filter">
                     <li class="filter-iteam"><button type="button" class="button current secondary">Все</button></li>
                     <li class="filter-iteam"><button type="button" class="button secondary">Веб-сайт</button></li>
